<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Twitch</string>
    <string name="tv_player_back_action" tools:ignore="MissingTranslation">Automatic mini-player</string>
    <string name="browse" tools:ignore="MissingTranslation">Browse</string>
    <string name="notification_downloads_channel_id" translatable="false">xtra_downloads_channel</string>
    <string name="notification_live_channel_id" translatable="false">xtra_live_channel</string>
    <string name="notification_playback_channel_id" translatable="false">xtra_playback_channel</string>
    <string name="lang_de" translatable="false">Deutsch</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_es" translatable="false">Español</string>
    <string name="lang_fr" translatable="false">Français</string>
    <string name="lang_gl" translatable="false">Galego</string>
    <string name="lang_in" translatable="false">Indonesia</string>
    <string name="lang_it" translatable="false">Italiano</string>
    <string name="lang_pt_br" translatable="false">Português - Brasil</string>
    <string name="lang_tr" translatable="false">Türkçe</string>
    <string name="lang_ru" translatable="false">Русский</string>
    <string name="lang_ar" translatable="false">العربية</string>
    <string name="lang_ja" translatable="false">日本語</string>
    <string name="lang_zh_tw" translatable="false">中文（繁體）</string>
    <string name="lang_zh_cn" translatable="false">中文（简体）</string>
    <string name="games">Games</string>
    <string name="popular">Popular</string>
    <string name="following">Following</string>
    <string name="downloads">Downloads</string>
    <string name="connection_error">Error connecting to the server. Please try again.</string>
    <string name="sort">Sort</string>
    <string name="upload_date">Upload date</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="view_count">View count</string>
    <string name="period">Period</string>
    <string name="apply">Apply</string>
    <string name="sort_and_period">Sort by: %1$s. Period: %2$s</string>
    <string name="trending">Trending</string>
    <string name="live">Live</string>
    <string name="videos">Videos</string>
    <string name="clips">Clips</string>
    <string name="scroll_down">Scroll down</string>
    <string name="auto">Auto</string>
    <string name="source">Source</string>
    <string name="audio_only">Audio only</string>
    <string name="chat_only">Chat only</string>
    <string name="select_quality">Select quality</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="downloaded">Download complete</string>
    <string name="uploaded_date">Uploaded %s</string>
    <string name="downloaded_date">Downloaded %s</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="skip">Skip</string>
    <string name="specify_time">Specify time</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="duration">Duration: %s</string>
    <string name="invalid_time">Invalid time</string>
    <string name="from_is_greater">\"From\" must be less than \"To\".</string>
    <string name="to_is_lesser">\"To\" must be greater than \"From\".</string>
    <string name="to_is_longer">\"To\" can\'t be greater than video length.</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this video?</string>
    <string name="token_expired">Your session has expired. Please log in again.</string>
    <string name="no_connection">No Internet connection</string>
    <string name="connection_restored">Back online</string>
    <string name="notification_downloads_channel_title">Downloads</string>
    <string name="storage_permission_title">Storage permission required</string>
    <string name="storage_permission_message">Storage permission is required to download videos.</string>
    <string name="permission_denied">Required permissions were denied.</string>
    <string name="nothing_here">Nothing here</string>
    <string name="tv_device_login_instructions" tools:ignore="MissingTranslation">On a phone or computer, open twitch.tv/activate and enter this code:\n\n%1$s\n\nAfter authorizing, return here and select Next.</string>
    <string name="watch_live">Watch live</string>
    <string name="open_player">Open player</string>
    <string name="error_stream">Error when loading stream</string>
    <string name="dark">Dark</string>
    <string name="amoled">Black</string>
    <string name="light">Light</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="landscape_chat_width">Landscape chat width</string>
    <string name="portrait_column_count">Portrait column count</string>
    <string name="landscape_column_count">Landscape column count</string>
    <string name="internal_storage">Internal storage</string>
    <string name="save_to">Save to</string>
    <string name="no_storage_detected">No available storage detected (most likely the phone is connected to a computer).</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Fast forward</string>
    <string name="seconds_full">%s seconds</string>
    <string name="unfollow_channel">Unfollow %s?</string>
    <string name="now_following">You\'re now following %s</string>
    <string name="unfollowed">Unfollowed %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="chat_replay_unavailable">Chat replay is unavailable</string>
    <string name="video_subscribers_only">This video is only available to subscribers.</string>
    <string name="player_error">Player error, retrying…</string>
    <string name="animated_emotes">Animated emotes</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="bold_usernames">Bold usernames</string>
    <string name="randomcolor">Random color for users without a color</string>
    <string name="message_limit">Message limit</string>
    <string name="player_defaultquality">Default player quality</string>
    <string name="player_doubletap">Double tap to toggle chat</string>
    <string name="player_channel">Show channel name</string>
    <string name="player_pause">Show pause button on livestreams</string>
    <string name="playback_speed">Playback speed</string>
    <string name="quality">Quality</string>
    <string name="show_uptime">Show stream uptime</string>
    <string name="chat_firstmsg_visibility">First messages and redemptions with text</string>
    <string name="timestamps">Show timestamps</string>
    <string name="timestamp_format">Timestamp format</string>
    <string name="recentMsg_enable">Load recent messages</string>
    <string name="recentMsg_limit">Recent message limit</string>
    <string name="show_usernotice">Show user notices (subs, raids)</string>
    <string name="show_clearmsg">Show deletions of single messages</string>
    <string name="show_clearchat">Show timeouts and bans</string>
    <string name="player_viewerlist">Open viewer list from view count</string>
    <string name="admin_settings">Enable/disable as device admin app</string>
    <string name="disable_chat">Disable chat</string>
    <string name="keep_chat_open">Keep chat connected in the background</string>
    <string name="volume">Volume</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="player_menu">Player menu</string>
    <string name="restart_player">Restart player</string>
    <string name="chat_ssl">Connect using SSL</string>
    <string name="enable_pubsub">Enable PubSub</string>
    <string name="image_quality">Image quality</string>
    <string name="points_notify">Notify when earning channel points</string>
    <string name="points_collect">Collect channel points automatically</string>
    <string name="show_raids">Show raids</string>
    <string name="auto_switch_raids">Switch stream on raid automatically</string>
    <string name="keep_screen_on_when_paused">Keep screen on when video is paused</string>
    <string name="stream_proxy_url_desc">\"$channel\" will be replaced with channel login</string>
    <string name="enable_stv">Enable 7TV emotes</string>
    <string name="enable_bttv">Enable BTTV emotes</string>
    <string name="enable_ffz">Enable FFZ emotes</string>
    <string name="disable_background_video">Disable video rendering in the background</string>
    <string name="use_background_audio_track">Switch to audio-only track in the background</string>
    <string name="use_websocket">Connect using WebSocket</string>
    <string name="show_title">Show title</string>
    <string name="show_category">Show category</string>
    <string name="use_audio_focus">Pause when other apps play audio</string>
    <string name="handle_audio_becoming_noisy">Pause when headphones are disconnected</string>
    <string name="show_view_count_icon">Show view count and uptime icons</string>
    <string name="playback_speeds">Playback speeds</string>
    <string name="follow">Follow</string>
    <string name="theme_adapted_username_color">Readable colors based on the app theme</string>
    <string name="text_size">Text size</string>
    <string name="sleep_timer_lock_screen">Lock screen after sleep timer is done</string>
    <string name="sleep_timer_time_picker">Use Material time picker for sleep timer</string>
    <string name="show_system_message_emotes">Show emotes on system messages</string>
    <string name="show_name_paints">Show 7TV name paints</string>
    <string name="show_stv_badges">Show 7TV badges</string>
    <string name="show_stv_personal_emotes">Show 7TV personal emotes</string>
    <string name="stv_live_updates">7TV live emote updates</string>
    <string name="show_polls">Show polls</string>
    <string name="show_predictions">Show predictions</string>
    <string name="minimize">Minimize</string>
    <string name="player_menu_settings">Player menu settings</string>
    <string name="chapters">Chapters</string>
    <string name="seek_to_live">Seek to live</string>
    <string name="audio_compressor">Audio compressor</string>
    <string name="subtitles">Subtitles</string>
    <string name="chat_input_toggle">Chat input toggle</string>
    <string name="chat_toggle">Chat toggle</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="save_video_positions">Save positions of watched videos</string>
    <string name="delete_video_positions">Delete video positions</string>
    <string name="use_webp_images">Use WebP images</string>
    <string name="avoid_rounded_corners">Avoid rounded screen corners</string>
    <string name="chat_size_modifier">Size modifier</string>
    <string name="chat_emote_size">Emote size</string>
    <string name="chat_badge_size">Badge size</string>
    <string name="overlay_emotes">Overlay emotes</string>
    <string name="translate_chat_messages">Translate chat messages</string>
    <string name="downloaded_languages">Downloaded languages</string>
    <string name="translate_target_language">Target language</string>
    <string name="move_player_freely">Move minimized player freely</string>
    <string name="use_background_audio_pip_closed">Play audio in the background when closing PiP</string>
    <string name="use_background_audio_pip_locked">Play audio in the background when the screen is locked in PiP mode</string>
    <string name="default_cellular_quality">Default player quality on cellular network</string>
    <string name="recent_messages_api_url">Recent messages API URL</string>
</resources>