<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="chat_boldnames"
        android:title="@string/bold_usernames"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_randomcolor"
        android:title="@string/randomcolor"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_theme_adapted_username_color"
        android:title="@string/theme_adapted_username_color"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="chat_timestamps"
        android:title="@string/timestamps"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/timestampEntries"
        android:entryValues="@array/timestampValues"
        android:key="chat_timestamp_format"
        android:summary="%s"
        android:title="@string/timestamp_format"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_use_webp"
        android:title="@string/use_webp_images"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="4"
        android:entries="@array/imageQualityEntries"
        android:entryValues="@array/imageQualityValues"
        android:key="chat_image_quality"
        android:summary="%s"
        android:title="@string/image_quality"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SeekBarPreference
        android:defaultValue="100"
        android:key="chat_size_modifier"
        android:max="200"
        android:title="@string/chat_size_modifier"
        app:iconSpaceReserved="false"
        app:min="1"
        app:showSeekBarValue="true"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="14"
        android:key="chat_text_size"
        android:title="@string/text_size"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="29.5"
        android:key="chat_emote_size"
        android:title="@string/chat_emote_size"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="18.5"
        android:key="chat_badge_size"
        android:title="@string/chat_badge_size"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:defaultValue="30"
        android:key="chatWidth"
        android:max="100"
        android:title="@string/landscape_chat_width"
        app:iconSpaceReserved="false"
        app:showSeekBarValue="true"
        app:singleLineTitle="false" />

    <SeekBarPreference
        android:defaultValue="600"
        android:key="chat_limit"
        android:max="1000"
        android:title="@string/message_limit"
        app:iconSpaceReserved="false"
        app:min="1"
        app:showSeekBarValue="true"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_recent"
        android:title="@string/recentMsg_enable"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="https://recent-messages.robotty.de/api/v2/recent-messages/$channel"
        android:key="chat_recent_messages_url"
        android:summary="@string/stream_proxy_url_desc"
        android:title="@string/recent_messages_api_url"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SeekBarPreference
        android:defaultValue="100"
        android:key="chat_recent_limit"
        android:max="800"
        android:title="@string/recentMsg_limit"
        app:iconSpaceReserved="false"
        app:min="1"
        app:showSeekBarValue="true"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="chat_translate"
        android:title="@string/translate_chat_messages"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="downloaded_languages"
        android:title="@string/downloaded_languages"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="en"
        android:key="chat_translate_target"
        android:summary="%s"
        android:title="@string/translate_target_language"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_keep_chat_open"
        android:title="@string/keep_chat_open"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_use_websocket"
        android:title="@string/use_websocket"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_use_ssl"
        android:title="@string/chat_ssl"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_pubsub_enabled"
        android:title="@string/enable_pubsub"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_points_collect"
        android:title="@string/points_collect"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="chat_points_notify"
        android:title="@string/points_notify"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_raids_show"
        android:title="@string/show_raids"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_raids_auto_switch"
        android:title="@string/auto_switch_raids"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_polls_show"
        android:title="@string/show_polls"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_predictions_show"
        android:title="@string/show_predictions"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_show_paints"
        android:title="@string/show_name_paints"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_show_stv_badges"
        android:title="@string/show_stv_badges"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_show_personal_emotes"
        android:title="@string/show_stv_personal_emotes"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_stv_live_updates"
        android:title="@string/stv_live_updates"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_enable_stv"
        android:title="@string/enable_stv"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_enable_bttv"
        android:title="@string/enable_bttv"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_enable_ffz"
        android:title="@string/enable_ffz"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_show_usernotice"
        android:title="@string/show_usernotice"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_show_clearmsg"
        android:title="@string/show_clearmsg"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_show_clearchat"
        android:title="@string/show_clearchat"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/chatFirstMsgEntries"
        android:entryValues="@array/miscValues"
        android:key="chat_firstmsg_visibility"
        android:summary="%s"
        android:title="@string/chat_firstmsg_visibility"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="animatedGifEmotes"
        android:title="@string/animated_emotes"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_zerowidth"
        android:title="@string/overlay_emotes"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="chat_system_message_emotes"
        android:title="@string/show_system_message_emotes"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="chat_disable"
        android:title="@string/disable_chat"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

</androidx.preference.PreferenceScreen>
